# communications-team

./: .gitignore  README.md  base_station.py  encode.sh  receiver.html  receiver.js  rover.py  sender.html  sender.js  server.js
CameraCapture/: .gitignore  README.md
CameraCapture/CameraCode/: CMakeLists.txt  Notes.md  README.md  main.cpp
CameraCapture/CameraRTC/src/: basestation.ts  objects.d.ts  rover.ts  server.ts
CameraCapture/VimbaX_2025-2/: README.txt
CameraCapture/VimbaX_2025-2/cti/: VimbaGigETL.cti
CameraCapture/VimbaX_2025-2/doc/: VimbaX_Documentation_Overview.html
WebRTC/: execute.sh  receiver.html  receiver.js  sender.html  sender.js  sender_main.html  sender_main.js  sender_periph.html  server.js
WebRTC+ffmpeg/: ff_receiver.js  ff_sender.js
WifiCollection/: platformio.ini
WifiCollection/lib/serial_com/: serial_com.cpp  serial_com.h
WifiCollection/lib/trilateralisation/: trilateralisation.cpp  trilateralisation.h
WifiCollection/lib/wifsniff/: wifsniff.cpp  wifsniff.h
WifiCollection/src/: main.cpp
archive/2024-25/: README.md
archive/CameraCapture/: .gitignore  README.md
archive/CameraCapture/CameraCode/: CMakeLists.txt  Notes.md  main.cpp
archive/robot-ui/: index.html  package-lock.json
basestationEnd/roverGUI/: DesignCriteria.md  package-lock.json
basestationEnd/socketServer/: package-lock.json  package.json  tsconfig.json
roverEnd/cameraCapture/: .gitignore  README.md  binding.gyp  bindingg.txt  package-lock.json  package.json  tsconfigg.txt
roverEnd/cameraRtcPipe/: package-lock.json  package.json  tsconfig.json
(+149 files in other folders)
